--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+    "express-basic-auth": "^1.2.0"
   },
   "dependencies": {
     "express": "^4.18.2"
