--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "site-linktree-bro",
+  "name": "jeromeibiza-site",
   "version": "1.0.0",
-  "description": "Site Linktree avec Dashboard sécurisé - Edition Bro",
+  "description": "Linktree J\u00e9r\u00f4me avec dashboard",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
